peering.tf
resource "aws_vpc_peering_connection" "peering" {
  peer_vpc_id   = var.default_vpc_id
  vpc_id        = aws_vpc.main.id
  auto_accept = true
  tags = {
    Name = "${var.env}-vpc-to-default-vpc"
  }
}
